# Capstone_teamg_2015

robographers-teamg/: README.md  start_rapps.bash  start_rapps.bash~
robographers-teamg/devel/: .catkin  .rosinstall  setup.sh
robographers-teamg/devel/include/intraface/: Emotion.h  Emotions.h  IrisGaze.h  Landmarks.h  dynparamsConfig.h
robographers-teamg/devel/include/robographers/: AprilTag.h  AprilTagList.h  AprilTagList.h~
robographers-teamg/devel/include/sound_play/: SoundRequest.h  SoundRequestAction.h  SoundRequestActionFeedback.h  SoundRequestActionGoal.h  SoundRequestActionResult.h  SoundRequestFeedback.h  SoundRequestGoal.h  SoundRequestResult.h
robographers-teamg/devel/lib/intraface/: bestphoto  emotion_listener  emotion_talker  headpose_talker  intraface_node  landmark_talker  listener  nosePosition  photoclick  smilePercentage  testsound
robographers-teamg/devel/lib/pkgconfig/: blinkstick_ros.pc  intraface.pc  my_rapps.pc  robographers.pc  sound_play.pc  turtlebot_swarm_rapps.pc
robographers-teamg/devel/lib/robographers/: april_tag_node  flagtalker  navigate  rotate
robographers-teamg/devel/lib/sound_play/: test
robographers-teamg/src/my_rapps/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robographers-teamg/src/my_rapps/apps/talker/: talker.rapp
robographers-teamg/src/robographers/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robographers-teamg/src/robographers/launch/: april_tag_usb.launch  april_tag_usb.launch~  calib_cam.launch  calib_cam.launch~  final.launch  final.launch~  final_client.launch  final_client.launch~  try.launch
robographers-teamg/src/robographers/src/: april_tag_node.cpp  flagtalker.cpp~  inntrafce.cpp~  intraface.cpp~  navigate.cpp  rotate.cpp
turtlebot_swarm_cotroler/turtlebot-swarm/overhead_localization/: package.xml
turtlebot_swarm_cotroler/turtlebot-swarm/overhead_localization/config/: camera_tree.yaml  green_camera_parameters.yaml  red_camera_parameters.yaml  tag_descriptions.yaml  yellow_camera_parameters.yaml
turtlebot_swarm_cotroler/turtlebot-swarm/overhead_localization/launch/: camera.launch
turtlebot_swarm_cotroler/turtlebot-swarm/overhead_localization/src/: overhead_localization_node.cpp
turtlebot_swarm_cotroler/turtlebot-swarm/turtlebot_behaviors/: CMakeLists.txt
turtlebot_swarm_cotroller/turtlebot-swarm/turtlebot_swarm_rapps/: CMakeLists.txt  package.xml
turtlebot_swarm_scripts/turtlebot-swarm/overhead_localization/: CMakeLists.txt
turtlebot_swarm_scripts/turtlebot-swarm/turtlebot_behaviors/: package.xml
(+96 files in other folders)
