<?xml version="1.0"?>
<package>
  <name>turtlebot_swarm_rapps</name>
  <version>0.0.0</version>
  <description>The turtlebot_swarm_rapps package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sasanka@todo.todo">sasanka</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/turtlebot_swarm_rapps</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>blinkstick_ros</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rocon_app>apps/auto_teleop/auto_teleop.rapp</rocon_app>
    <rocon_app>apps/auto_led_teleop/auto_led_teleop.rapp</rocon_app>
    <rocon_app>apps/auto_video_teleop/auto_video_teleop.rapp</rocon_app>
  </export>
</package>
